# petty-chess

./: .gitignore  Cargo.toml  rustfmt.toml
app/: Cargo.toml
engine/: Cargo.toml
engine/src/: lib.rs  main.rs
engine/src/ai/: engine.rs
engine/src/core/: board.rs  can_castle.rs  colour.rs  fen.rs  mod.rs  move.rs  move_flags.rs  movegen.rs  piece.rs  position.rs
src/: lib.rs  main.rs
src/core/: bitboard.rs  board.rs  can_castle.rs  colour.rs  fen.rs  magic.rs  mod.rs  move.rs  move_flags.rs  movegen.rs  perft.rs  piece.rs  position.rs  side.rs  square.rs  zobrist.rs
src/engine/: engine.rs  evaluation.rs  mobility.rs  mod.rs  move_ordering.rs  phase.rs  score.rs  search.rs  transposition.rs
src/uci/: message.rs  mod.rs  parser.rs  response.rs
