[package]
name = "petty-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
derive-try-from-primitive = "1.0.0"
eyre = "0.6.12"
rand = "0.8.5"
smallvec = "1.13.2"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[profile.dev]
opt-level = 3
panic = "abort"
debug = false

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
incremental = false

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
