cargo-features = ["profile-rustflags"]

[package]
name = "petty-chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
derive-try-from-primitive = "1.0.0"
rand = "0.8.5"
smallvec = "1.13.2"
tracing = { version = "0.1.40", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3.18", default-features = false, optional = true, features = [
    "fmt",
    "smallvec",
    "std",
] }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "dep:tracing-appender", "dep:tracing-subscriber"]

[profile.dev]
opt-level = 3
panic = "abort"
debug = false

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
incremental = false
rustflags = ["-Ctarget-cpu=native"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_lossless = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
option_map_unit_fn = "allow"
